<?xml version="1.0" encoding="utf-8"?>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.example.shhhauction.ui.order.DetailFragment"
        android:id="@+id/item_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_item_name"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                tools:text="detail name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/detail_item_desc"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/detail_item_name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_marginStart="8dp"

                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/highestBid"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/highest_bid_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/detail_item_highestBid"
                app:layout_constraintBaseline_toBaselineOf="@id/detail_item_highestBid"
                app:layout_constraintHorizontal_bias="0.5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_item_highestBid"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginEnd="8dp"
                android:text="@string/highestBid"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/highest_bid_label"
                app:layout_constraintTop_toBottomOf="@id/detail_item_desc" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/bidIncrement"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginStart="8dp"

                android:id="@+id/bid_increment_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/detail_item_bidIncrement"
                app:layout_constraintBaseline_toBaselineOf="@id/detail_item_bidIncrement"
                app:layout_constraintHorizontal_bias="0.5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_item_bidIncrement"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/bid_increment_label"
                app:layout_constraintTop_toBottomOf="@id/detail_item_highestBid" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bid_button"
                android:text="@string/bid"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/detail_item_bidIncrement"
                app:layout_constraintEnd_toEndOf="@id/detail_item_desc"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_button"
                android:text="@string/edit"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/bid_button"
                app:layout_constraintEnd_toEndOf="@id/detail_item_desc"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                android:text="@string/delete"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/edit_button"
                app:layout_constraintEnd_toEndOf="@id/detail_item_desc"/>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

